# JamieMods

./: .clang-format  .clang-tidy  .doxygen  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Folder.DotSettings  LICENSE  README.md  TODO.md  build.ps1  buildAndLaunchSkyrim.ps1  cliff.toml  cpp.hint  requirements.txt  vcpkg-configuration.json  vcpkg.json
.github/: release.yml
.github/workflows/: qodana_code_quality.yml  rolling-beta.yml  simple-ime-release.yml  simple-ime-rolling-beta.yml
.run/: Run MO2 SKSE.run.xml
Data/SKSE/Plugins/: SimpleIME.ini  SimpleIME.yml  SkyrimTransmogrify.ini
Data/SKSE/Plugins/debug/: SimpleIME.ini
SimpleIME/: CMakeLists.txt  ChangeLogs.adoc  ModMain.bbcode  README.md
SimpleIME/include/hooks/: Hooks.hpp  UiHooks.h
SimpleIME/include/tsf/: LangProfileUtil.h  TextStore.h
SimpleIME/include/ui/fonts/: FontBuilder.h  preview_panel.h
SimpleIME/src/: ImeApp.cpp  PCH.h
SimpleIME/src/hooks/: Hooks.cpp
SimpleIME/src/ui/: ImeOverlay.cpp
SimpleIME/src/ui/fonts/: preview_panel.cpp
SimpleIME/src/ui/panels/: AppearancePanel.cpp
SkyrimSETransmogrify/: CmakeLists.txt
SkyrimSETransmogrify/include/: Config.h  Context.h  Ext.h  Hooks.h  ImeUI.hpp  RenderManager.h  SKSEDetours.h  Transmogrify.h  Window.hpp  input.h
SkyrimSETransmogrify/src/: Context.cpp  Hooks.cpp  ImeUI.cpp  PCH.h  RenderManager.cpp  SKSEDetours.cpp  Transmogrify.cpp  Window.cpp  input.cpp  plugin.cpp
assets/fonts/: LICENSE
assets/lucide/: lucide-icons.txt
cmake/: build-lucide-icon.cmake  imgui-config.cmake  jamiemods.common.cmake
cmake/material-you/: CMakeLists.txt  mcu_utils.cpp
common/: CMakeLists.txt  FunctionHook.h  HookUtils.h  WCharUtils.h  common.h  config.h  hook.h  log.h  path_utils.h  themes.toml  utils.h
common/fonts/: FontManager.cpp  FontManager.h
common/i18n/: Translator.h  translator_manager.cpp  translator_manager.h
common/imgui/: ErrorNotifier.cpp  ErrorNotifier.h  ImGuiEx.h  ImGuiFlags.h  ImGuiScop.h  ImGuiScope.h  ImThemeLoader.cpp  ImThemeLoader.h  LayoutHelper.h  Layouts.h  M3ThemeBuilder.cpp  M3ThemeBuilder.h  M3ThemeLoader.cpp  M3ThemeLoader.h  Material3.h  Material3Styles.h  ThemesLoader.cpp  ThemesLoader.h  imgui_m3.cpp  imgui_m3_ex.cpp  imgui_m3_ex.h  imguiex_enum_wrap.h  imguiex_m3.cpp  imguiex_m3.h  imguiex_m3_slider.cpp  imguiex_m3_slider.h  m3_specs.h
common/imguiex/: ErrorNotifier.cpp  ErrorNotifier.h  ImGuiEx.h  Layouts.h  M3ThemeBuilder.cpp  M3ThemeBuilder.h  Material3.h  ThemesLoader.cpp  ThemesLoader.h  icon.h  imguiex_enum_wrap.h  imguiex_m3.cpp  imguiex_m3.h  imguiex_m3_slider.cpp  imguiex_m3_slider.h  m3.cpp
common/imguiex/m3/: colors.h
common/imguiex/m3/facade/: base.h  button.h  buttons.h  fab.h  facades.h  icon_button.h  menu.h  text_field.h  text_role.h
common/imguiex/m3/spec/: base.h  button.h  button_groups.h  buttons.h  checkbox.h  chips.h  color_roles.h  dialog.h  fab.h  icon_button.h  layout.h  menu.h  nav_rail.h  others.h  shapes.h  slider.h  specs.h  text_field.h  text_role.h  tool_bar.h  typography.h
common/test/: UtilsTest.cpp  m3_button_test.cpp  m3_list_test.cpp  m3_test_fixture.cpp  m3_test_fixture.h
common/toml++/: toml.hpp
dev/: AddressLibTool.cpp  BasicTest.cpp  CmakeLists.txt  DumpAddress.cpp  GlobalHook.cpp  HelloWorld.sln  ImGuiTest.cpp  ImeUI.cpp  Status.h  Win32Test.cpp  assembly.asm  assembly.cpp
dev/include/: AddressLibTool.hpp  ImeUI.hpp  PCH.hpp  imconfig.h  versionlibdb.h
dev/tsf/: TsfApp.cpp  TsfWnd.h
docs/: GFX Callbacks.md  TAGGING_GUIDE.md  imgui.md
enc_temp_folder/39ffe727bab4e065be662495a837c943/: ImeWnd.cpp
enc_temp_folder/70c2aedcefa9d59b6bcc6f3abfcc35/: ImeUI.cpp
imguiex/: CMakeLists.txt
imguiex/imguiex/: ErrorNotifier.cpp  ErrorNotifier.h  ImGuiEx.h  Material3.h  ThemesLoader.cpp  ThemesLoader.h  icon.h  imgui_manager.cpp  imgui_manager.h  imguiex_enum_wrap.h  imguiex_m3.cpp  imguiex_m3.h  imguiex_m3_slider.cpp  imguiex_m3_slider.h  m3.cpp
imguiex/imguiex/m3/: colors.h
imguiex/imguiex/m3/facade/: appbar.h  button_groups.h  facades.h  nav_rail.h  others.h  slider.h  text_field.h  typography.h
imguiex/imguiex/m3/spec/: appbar.h  base.h  buttons.h  chips.h  color_roles.h  layout.h  menu.h  nav_rail.h  others.h  search.h  shapes.h  slider.h  text_field.h  tool_bar.h  typography.h
imguiex/test/: imgui_test_config.h  m3_list_test.cpp  m3_test_fixture.h
install/release-cl-vcpkg/src/SKSE/Plugins/: SimpleIME.ini  SimpleIME.lib
scripts/: GameProfileSwitch.ps1  build_icons_font.py  game-profile  imgui_flags_wrap_generator.py  m3_design_system_data_parser.cpp  m3_spec_token_extracter.py  skse_switcher.py
src/: Hooks.cpp  PCH.h  RenderManager.cpp  Transmogrify.cpp  input.cpp  main.cpp  plugin.cpp
src/include/: Context.h  Ext.h  Hooks.h  RenderManager.h  Transmogrify.h  input.h
utils/: utils.cpp  utils.hpp
